crudely added save analog calibration

--- a/html/BLE-Pairing.html
+++ b/html/BLE-Pairing.html
@@ -12,6 +12,8 @@
     <button onclick="isWebBluetoothEnabled()">Establish Connection</button>
     <button onclick="requestAnalogReadings()">Calibrate Analog Sticks</button>
     <button onclick="sendStickCalibration()">Send Stick Calibration Values</button>
+    <button onclick="getPassword()">Enter Password</button>
+    <button onclick="saveCalibValues()">Save Calibration</button>
 
     <p id="demo"></p>
 
@@ -19,6 +21,7 @@
     <script src="/../scripts/Analog_Frontend.js"></script>
     <script src="/../scripts/Analog_Backend.js"></script>
     <script src="/../scripts/Analog_Click_Backend.js"></script>
+    <script src="/../scripts/Password_Entry_Backend.js"></script>
 
     <canvas id="canvas" width="150" height="150"></canvas>
 
