--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="manifest" href="/manifest.json">
   </head>
   <body>
-    <h1>My Sample PWA</h1>
+    <h1>My Sample PWA... bitch.</h1>
     <script>
         if('serviceWorker' in navigator) {
           navigator.serviceWorker.register('/sw.js', { scope: '/' });
