Removed some buttons

--- a/html/BLE-Pairing.html
+++ b/html/BLE-Pairing.html
@@ -11,9 +11,9 @@
 
     <button onclick="isWebBluetoothEnabled()">Establish Connection</button>
     <button onclick="requestAnalogReadings()">Calibrate Analog Sticks</button>
-    <button onclick="sendStickCalibration()">Send Stick Calibration Values</button>
+    <!-- <button onclick="sendStickCalibration()">Send Stick Calibration Values</button> -->
     <button onclick="getPassword()">Enter Password</button>
-    <button onclick="saveCalibValues()">Save Calibration</button>
+    <!-- <button onclick="saveCalibValues()">Save Calibration</button> -->
 
     <p id="demo"></p>
 
