--- a/html/BLE-Pairing.html
+++ b/html/BLE-Pairing.html
@@ -4,15 +4,28 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width,initial-scale=1" />
     <link rel="shortcut icon" href="https://c.s-microsoft.com/favicon.ico?v2" />
-    <title>Bluetooth Pairing</title>
+    <title>Controller Settings</title>
+
+    <style>
+      body {
+          margin: 0;
+          width: 100vw;
+          height: 100vh;
+      }
+
+      div {
+          width: 100vw;
+          height: 100vh;
+      }
+    </style>
   </head>
   <body>
-    <h1>Bluetooth Pairing</h1>
+    <h1>Controller Settings</h1>
 
-    <button onclick="isWebBluetoothEnabled()">Establish Connection</button>
-    <button onclick="requestAnalogReadings()">Calibrate Analog Sticks</button>
-    <button onclick="requestDigitalReadings()">Digital Settings</button>
-    <button onclick="getPassword()">Enter Password</button>
+    <button style="font-size : 17px;height:35px;width:170px" onclick="isWebBluetoothEnabled()">Connect</button>
+    <button style="font-size : 17px;height:35px;width:170px" onclick="requestAnalogReadings()">Analog Settings</button>
+    <button style="font-size : 17px;height:35px;width:170px" onclick="requestDigitalReadings()">Digital Settings</button>
+    <button style="font-size : 17px;height:35px;width:170px" onclick="getPassword()">Enter Password</button>
 
     <p id="demo"></p>
 
