--- a/html/BLE-Pairing.html
+++ b/html/BLE-Pairing.html
@@ -9,10 +9,13 @@
   <body>
     <h1>Controller Settings</h1>
 
-    <button style="font-size : 17px;height:35px;width:160px" onclick="isWebBluetoothEnabled()">Connect</button>
-    <button style="font-size : 17px;height:35px;width:160px" onclick="requestAnalogReadings()">Analog Settings</button>
-    <button style="font-size : 17px;height:35px;width:160px" onclick="requestDigitalReadings()">Digital Settings</button>
-    <button style="font-size : 17px;height:35px;width:160px" onclick="getPassword()">Enter Password</button>
+    <button style="font-size : 28px;height:50px;width:140px" onclick="isWebBluetoothEnabled()">Connect</button>
+    <button style="font-size : 28px;height:50px;width:140px" onclick="getPassword()">Password</button>
+    <button style="font-size : 28px;height:50px;width:140px" onclick="enableWifiUpload()">Update</button>
+    <button style="font-size : 28px;height:50px;width:140px" onclick="requestAnalogReadings()">Analog</button>
+    <button style="font-size : 28px;height:50px;width:140px" onclick="requestDigitalReadings()">Digital</button>
+    
+    
 
     <p id="demo"></p>
 
@@ -23,6 +26,7 @@
     <script src="/../scripts/Password_Entry_Backend.js"></script>
     <script src="/../scripts/Digital_Frontend.js"></script>
     <script src="/../scripts/Digital_Backend.js"></script>
+    <script src="/../scripts/Wifi_Backend.js"></script>
 
     <canvas id="canvas" width="150" height="150"></canvas>
 
