form width formatting

--- a/contact-us/index.html
+++ b/contact-us/index.html
@@ -128,7 +128,7 @@ h1,h2,h3,h4,h5,h6{color: var(--wp--preset--color--foreground);font-family: var(-
 
 
 <div class="is-layout-constrained entry-content wp-block-post-content">
-<iframe loading="lazy" src="https://docs.google.com/forms/d/e/1FAIpQLSd_WPM-l0FQ1Rak0ApP1QgAmm7aQ081V0wHP6k1wnk9aPt-dg/viewform?embedded=true" width="640" height="677" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
+<iframe loading="lazy" src="https://docs.google.com/forms/d/e/1FAIpQLSd_WPM-l0FQ1Rak0ApP1QgAmm7aQ081V0wHP6k1wnk9aPt-dg/viewform?embedded=true" width="1800" style="max-width:100%" height="677" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
 </div>
 
 
