--- a/html/BLE-Pairing.html
+++ b/html/BLE-Pairing.html
@@ -15,7 +15,7 @@
     <button style="font-size : 28px;height:50px;width:140px" onclick="requestAnalogReadings()">Analog</button>
     <button style="font-size : 28px;height:50px;width:140px" onclick="requestDigitalReadings()">Digital</button>
     
-    
+    <div id="on screen information" style="position:fixed; left:350px; top:30px; font-size:25px">Click Connect To Pair Controller</div>
 
     <p id="demo"></p>
 
