edited done button name wifi

--- a/html/BLE-Pairing.html
+++ b/html/BLE-Pairing.html
@@ -23,7 +23,7 @@
       <div style="position:absolute; top: 120px;left:50px; font-size : 20px;">Password:</div>
       <input id="ssid" style="position:absolute; top: 70px;left:150px;"/>
       <input id="pass" type="password" style="position:absolute; top: 120px;left:150px"/>
-      <button onclick="done()" style="position:absolute; top: 170px;left:270px; font-size : 20px;">Done</button>  
+      <button onclick="doneWifiCredentialCollection()" style="position:absolute; top: 170px;left:270px; font-size : 20px;">Done</button>  
       <button onclick="toggleHideWifiPass()" style="position:absolute; top: 120px;left:340px; font-size : 12px;">View</button>     
     </div>
 
