added enter clicks and text change buttons

--- a/html/BLE-Pairing.html
+++ b/html/BLE-Pairing.html
@@ -14,6 +14,7 @@
     <button style="font-size : 28px;height:50px;width:140px;position:absolute;top:80px;left:298px;" onclick="enableWifiUpload()">Update</button>
     <button style="font-size : 28px;height:50px;width:140px;position:absolute;top:80px;left:443px;" onclick="requestAnalogReadings()">Analog</button>
     <button style="font-size : 28px;height:50px;width:140px;position:absolute;top:80px;left:588px;" onclick="requestDigitalReadings()">Digital</button>
+    <button style="font-size : 28px;height:50px;width:140px;" ></button> <!-- for spacing temporarilly -->
     
     <div id="on screen information" type="button" style="position:fixed; left:350px; top:30px; font-size:25px" onclick="redirectPage()">Click Connect To Pair Controller</div>
 
