added default pass message

--- a/html/BLE-Pairing.html
+++ b/html/BLE-Pairing.html
@@ -18,7 +18,7 @@
     <button style="font-size : 28px;height:50px;width:140px;" ></button> <!--  for spacing temporarilly-->
     
     <div id="on screen information" type="button" style="position:absolute; left:350px; top:30px; font-size:25px" onclick="redirectPage()">Click Connect To Pair Controller</div>
-    <div id="Firmware Version" style="position:absolute; left:10px; top:135px; font-size:30px">Firmware Version</div>
+    <div id="Firmware Version" style="position:absolute; left:10px; top:135px; font-size:30px">Default Password = KEG CONCH</div>
     
 
     <div id="popup" style="width:400px;height:200px;padding:0px;background-color:white;position:absolute;top:0px;left:100px;display:none;font-size : 28px; border-radius: 10px;">
